--- a/QRCodeScannerDemo/QRCodeScanner/Base.lproj/Main.storyboard
+++ b/QRCodeScannerDemo/QRCodeScanner/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,50 +16,9 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y86-lC-daJ">
-                                <rect key="frame" x="250" y="320" width="100" height="100"/>
-                                <color key="backgroundColor" red="0.19376453757286072" green="0.50850099325180054" blue="0.85232251882553101" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="cCK-Xw-hsm"/>
-                                    <constraint firstAttribute="width" constant="100" id="pyc-RQ-ulX"/>
-                                </constraints>
-                                <state key="normal" title="生成二维码">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="generateQRCode:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8zn-cR-sob"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ohr-86-9sO">
-                                <rect key="frame" x="250" y="150" width="100" height="100"/>
-                                <color key="backgroundColor" red="0.98039215690000003" green="0.3294117647" blue="0.34509803919999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="LaX-SR-Xtx"/>
-                                    <constraint firstAttribute="height" constant="100" id="b8b-m4-oH3"/>
-                                </constraints>
-                                <state key="normal" title="扫描二维码">
-                                    <color key="titleColor" red="0.87892597849999998" green="0.87892597849999998" blue="0.87892597849999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="captureQRCode:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A2m-ma-rbQ"/>
-                                </connections>
-                            </button>
-                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerY" secondItem="ohr-86-9sO" secondAttribute="centerY" constant="100" id="9C3-K1-uSE"/>
-                            <constraint firstAttribute="centerX" secondItem="ohr-86-9sO" secondAttribute="centerX" id="BtB-I0-tJx"/>
-                            <constraint firstAttribute="centerY" secondItem="Y86-lC-daJ" secondAttribute="centerY" constant="-70" id="ELO-wd-5dA"/>
-                            <constraint firstAttribute="centerX" secondItem="Y86-lC-daJ" secondAttribute="centerX" id="gU6-hP-PYY"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="QRCodeGenerate" destination="Y86-lC-daJ" id="1Im-1U-HjM"/>
-                        <outlet property="QRCodeScan" destination="ohr-86-9sO" id="M0l-tu-8fS"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
